external-crates/move/crates/move-compiler/tests/development/signed_ints/signed_int_in_vector.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E01002]: unexpected token
   ┌─ tests/development/signed_ints/signed_int_in_vector.move:28:25
   │
28 │         let _v = vector[-_x, 1i64, -_x];
   │                         ^ Unexpected '-'. Expected a vector argument expression

error[E01002]: unexpected token
   ┌─ tests/development/signed_ints/signed_int_in_vector.move:28:36
   │
28 │         let _v = vector[-_x, 1i64, -_x];
   │                                    ^ Unexpected '-'. Expected a vector argument expression
